src/App.css
/* ... */
/**
 * Ensure the default browser behavior of the `hidden` attribute.
 */

[hidden] {
  display: none;
}

*, ::before, ::after {
	--tw-translate-x: 0;
	--tw-translate-y: 0;
	--tw-rotate: 0;
	--tw-skew-x: 0;
	--tw-skew-y: 0;
	--tw-scale-x: 1;
	--tw-scale-y: 1;
	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
	--tw-border-opacity: 1;
	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
	--tw-ring-offset-shadow: 0 0 #0000;
	--tw-ring-shadow: 0 0 #0000;
	--tw-shadow: 0 0 #0000;
	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}
.aspect-w-1,
.aspect-w-2,
.aspect-w-3,
.aspect-w-4,
.aspect-w-5,
.aspect-w-6,
.aspect-w-7,
.aspect-w-8,
.aspect-w-9,
.aspect-w-10,
.aspect-w-11,
.aspect-w-12,
.aspect-w-13,
.aspect-w-14,
.aspect-w-15,
.aspect-w-16 {
	position: relative;
	padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
}
.aspect-w-1 > *,
.aspect-w-2 > *,
.aspect-w-3 > *,
.aspect-w-4 > *,
.aspect-w-5 > *,
.aspect-w-6 > *,
.aspect-w-7 > *,
.aspect-w-8 > *,
.aspect-w-9 > *,
.aspect-w-10 > *,
.aspect-w-11 > *,
.aspect-w-12 > *,
.aspect-w-13 > *,
.aspect-w-14 > *,
.aspect-w-15 > *,
.aspect-w-16 > * {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}
.aspect-w-1 {
	--tw-aspect-w: 1;
}
.aspect-h-1 {
	--tw-aspect-h: 1;
}
.pointer-events-none {
	pointer-events: none;
}
.fixed {
	position: fixed;
}
.absolute {
	position: absolute;
}
.relative {
	position: relative;
}
.sticky {
	position: sticky;
}
.inset-0 {
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
}
.inset-x-0 {
	left: 0px;
	right: 0px;
}
.top-0 {
	top: 0px;
}
.bottom-0 {
	bottom: 0px;
}
.right-0 {
	right: 0px;
}
.z-10 {
	z-index: 10;
}
.z-50 {
	z-index: 50;
}
.order-2 {
	order: 2;
}
.order-1 {
	order: 1;
}
.col-span-2 {
	grid-column: span 2 / span 2;
}
.col-span-4 {
	grid-column: span 4 / span 4;
}
.col-span-1 {
	grid-column: span 1 / span 1;
}
.col-start-4 {
	grid-column-start: 4;
}
.col-start-2 {
	grid-column-start: 2;
}
.row-span-4 {
	grid-row: span 4 / span 4;
}
.row-span-2 {
	grid-row: span 2 / span 2;
}
.row-span-3 {
	grid-row: span 3 / span 3;
}
.row-start-2 {
	grid-row-start: 2;
}
.row-start-3 {
	grid-row-start: 3;
}
.row-start-4 {
	grid-row-start: 4;
}
.mx-auto {
	margin-left: auto;
	margin-right: auto;
}
.my-4 {
	margin-top: 1rem;
	margin-bottom: 1rem;
}
.mx-2 {
	margin-left: 0.5rem;
	margin-right: 0.5rem;
}
.mx-3 {
	margin-left: 0.75rem;
	margin-right: 0.75rem;
}
.mx-1 {
	margin-left: 0.25rem;
	margin-right: 0.25rem;
}
.mx-4 {
	margin-left: 1rem;
	margin-right: 1rem;
}
.mx-6 {
	margin-left: 1.5rem;
	margin-right: 1.5rem;
}
.mb-8 {
	margin-bottom: 2rem;
}
.mb-2 {
	margin-bottom: 0.5rem;
}
.mr-6 {
	margin-right: 1.5rem;
}
.mb-12 {
	margin-bottom: 3rem;
}
.mb-4 {
	margin-bottom: 1rem;
}
.mr-4 {
	margin-right: 1rem;
}
.mb-3 {
	margin-bottom: 0.75rem;
}
.mt-60 {
	margin-top: 15rem;
}
.ml-8 {
	margin-left: 2rem;
}
.ml-6 {
	margin-left: 1.5rem;
}
.mb-6 {
	margin-bottom: 1.5rem;
}
.mb-20 {
	margin-bottom: 5rem;
}
.mr-3 {
	margin-right: 0.75rem;
}
.ml-3 {
	margin-left: 0.75rem;
}
.mt-2 {
	margin-top: 0.5rem;
}
.block {
	display: block;
}
.inline-block {
	display: inline-block;
}
.flex {
	display: flex;
}
.grid {
	display: grid;
}
.hidden {
	display: none;
}
.h-48 {
	height: 12rem;
}
.h-full {
	height: 100%;
}
.h-52 {
	height: 13rem;
}
.h-screen {
	height: 100vh;
}
.min-h-85v {
	min-height: 85vh;
}
.min-h-100v {
	min-height: 100vh;
}
.w-full {
	width: 100%;
}
.w-2\/3 {
	width: 66.666667%;
}
.w-11\/12 {
	width: 91.666667%;
}
.w-12 {
	width: 3rem;
}
.w-16 {
	width: 4rem;
}
.w-20 {
	width: 5rem;
}
.w-5\/6 {
	width: 83.333333%;
}
.w-1\/2 {
	width: 50%;
}
.w-40 {
	width: 10rem;
}
.w-60 {
	width: 15rem;
}
.w-screen {
	width: 100vw;
}
.-rotate-45 {
	--tw-rotate: -45deg;
	transform: var(--tw-transform);
}
.-skew-y-12 {
	--tw-skew-y: -12deg;
	transform: var(--tw-transform);
}
.transform {
	transform: var(--tw-transform);
}
@keyframes bounce {

	0%, 100% {
		transform: translateY(-25%);
		animation-timing-function: cubic-bezier(0.8,0,1,1);
	}

	50% {
		transform: none;
		animation-timing-function: cubic-bezier(0,0,0.2,1);
	}
}
.animate-bounce {
	animation: bounce 1s infinite;
}
.cursor-pointer {
	cursor: pointer;
}
.cursor-default {
	cursor: default;
}
.grid-flow-row {
	grid-auto-flow: row;
}
.grid-cols-4 {
	grid-template-columns: repeat(4, minmax(0, 1fr));
}
.grid-cols-5 {
	grid-template-columns: repeat(5, minmax(0, 1fr));
}
.grid-rows-4 {
	grid-template-rows: repeat(4, minmax(0, 1fr));
}
.flex-col {
	flex-direction: column;
}
.flex-wrap {
	flex-wrap: wrap;
}
.items-center {
	align-items: center;
}
.items-stretch {
	align-items: stretch;
}
.justify-center {
	justify-content: center;
}
.gap-3 {
	gap: 0.75rem;
}
.gap-1 {
	gap: 0.25rem;
}
.self-center {
	align-self: center;
}
.overflow-hidden {
	overflow: hidden;
}
.whitespace-pre-line {
	white-space: pre-line;
}
.rounded-full {
	border-radius: 9999px;
}
.rounded-lg {
	border-radius: 0.5rem;
}
.rounded-md {
	border-radius: 0.375rem;
}
.border-4 {
	border-width: 4px;
}
.border {
	border-width: 1px;
}
.border-b {
	border-bottom-width: 1px;
}
.border-b-2 {
	border-bottom-width: 2px;
}
.border-white {
	--tw-border-opacity: 1;
	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
}
/* ... */

